# AI_ChatBot

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  TODOS.md  plan.md  render.yaml
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_week2_core_schema.py  002_embedding_3072.py  003_week4_feedback_rating_leads_context.py  004_week6_consent_at.py  005_halfvec_hnsw_index.py  006_content_hash.py  007_hybrid_search.py
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: admin_analytics.py  admin_auth.py  admin_conversations.py  admin_knowledge.py  admin_leads.py  admin_settings.py  chat.py  health.py  leads.py  router.py
apps/api/app/core/: chat_rate_limit.py  config.py  context.py  errors.py  logging.py  rate_limit.py  security.py
apps/api/app/core/middleware/: __init__.py  request_context.py
apps/api/app/db/: session.py
apps/api/app/db/models/: __init__.py  analytics_event.py  api_key.py  audit_log.py  conversation.py  feedback.py  knowledge.py  lead.py  message.py  refresh_token.py  user.py
apps/api/app/schemas/: __init__.py  admin_analytics.py  admin_conversations.py  admin_leads.py  admin_settings.py  auth.py  chat.py  common.py  knowledge.py  leads.py
apps/api/app/services/: audit.py  auth_service.py  knowledge_document_service.py
apps/api/app/services/ai/: __init__.py  language.py  model_router.py  prompt_builder.py  (+2 more)
apps/api/app/tests/: conftest.py
apps/api/scripts/: ensure_pgvector.py  migrate.sh  seed_admin.py
(+94 files in other folders)
